syntax = "proto3";

package greetpb;
option go_package="/greet/greetpb";

// greeting struct
message Greeting {
    string first_name = 1;
    string last_name = 2;
}

// greet request
message GreetRequest {
    Greeting greeting = 1;
}

// greet response
message GreetResponse {
    string result = 1;
}

service GreetService{
    // unary API
    rpc Greet(GreetRequest) returns (GreetResponse){};

    // rpc with deadline
    rpc GreetWithDeadline(GreetRequest) returns (GreetResponse){};
};